# human-scene-interaction-system

./: .gitattributes  .gitignore  README.md  start_backend.sh  start_frontend.sh
backend/: requirements.txt
backend/app/: main.py
backend/app/routers/: results.py  screenshot.py  stream.py  upload.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/three/: PointCloudViewer.tsx  SMPLMeshPlayer.tsx  SceneCanvas.tsx
frontend/src/components/ui/: EventLog.tsx  UploadPanel.tsx  VideoPanel.tsx
ml-pipeline/: pyproject.toml  setup_gpu.sh
ml-pipeline/configs/: default.yaml
ml-pipeline/pipeline/: __init__.py  clip_labeler.py  contact_from_proximity.py  contact_projector.py  josh3r_runner.py  josh_runner.py  sam3_segmentor.py  types.py
ml-pipeline/scripts/: run_pipeline.py
